squashing bugs

--- a/src/App.css
+++ b/src/App.css
@@ -34,11 +34,11 @@
 }
 
 .home {
-  background-color: #656565;
+  background-color: #370ada;
 }
 
 .away {
-  background-color: #af750a;
+  background-color: #f3600b;
 }
 
 .home__name,
